Magnetic-dish: a11y fixes & invisible text on homepage (#1028)
* 🎉👯 Checkpoint
./server/redirects.js:708175/97

* a11y fixes and bring back the missing text on homepage

* fix centering on fallback

--- a/src/presenters/pages/home-v2/styles.styl
+++ b/src/presenters/pages/home-v2/styles.styl
@@ -20,6 +20,7 @@
 .subtitle
   margin-left: u3
   margin-bottom: u2
+  position: relative
   @media(min-width: mediumViewport)
     margin-bottom: 2.5em
     
